# bosh-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs
src/game/: line.rs  mod.rs  track.rs  vector.rs
src/linestore/: grid.rs  mod.rs  raw_store.rs
src/physics/: bone_physics.rs  entity_physics.rs
src/rider/: entities.rs  point.rs
