[package]
name = "bosh-rs"
version = "0.4.4"
edition = "2021"
authors = ["lipfang"]
description = "A highly customizable physics engine for the game Line Rider"
repository = "https://codeberg.org/lipfang/bosh-rs"
license = "LGPL-3.0-only"
keywords = [
    "line-rider",
    "line",
    "rider",
    "physics"
]
categories = [
    "game-development",
    "games"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
read-from = "0.5"

[dev-dependencies]
lr_formatter_rs = { path = "../lr-formatter-rs" }
